# eosio-watcher-plugin

./: CMakeLists.txt  LICENSE.txt  README.md  sample-post.json
include/eosio/watcher_plugin/: http_async_client.hpp  watcher_plugin.hpp
src/: watcher_plugin.cpp
watcher_plugin/: CMakeLists.txt  watcher_plugin.cpp
